--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -140,9 +140,9 @@
     height: 440px;
     background-size: cover;
     overflow: hidden;
-    margin-top: 30px;
     @include respond-to(tablet) {
       height: 250px;
+      margin-top: 30px;
     }
 
     .bkr2 {
@@ -168,6 +168,10 @@
       -4px 8px 1px #7b7a7a, 
       -5px 10px 1px #e4e3e2;
     text-align: center;
+    margin-bottom: 0;
+    @include respond-to(tablet) {
+      margin-bottom: auto;
+    }
   }
 
   .container-1 {
@@ -178,6 +182,13 @@
       width: 40%;
       display: block;
       align-self: center;
+      margin-top: 0;
+    }
+  }
+
+  .container-1 div {
+    @include respond-to(tablet) {
+      max-width: 380px;
     }
   }
 
@@ -192,10 +203,19 @@
     margin: auto;
     @include respond-to(tablet) {
       width: 38%;
-      margin-top: 20px;
+      margin-top: auto;
     }
-    @include respond-to(desktop) {
-      margin-top: 31px;
+
+    #socialIcons {
+      display: flex;
+      justify-content: space-around;
+      margin-left: 13%;
+      margin-bottom: 0;
+      margin-top: 0;
+
+      @include respond-to(tablet) {
+        margin-top: 70px
+      }
     }
     
   }
@@ -216,3 +236,4 @@ svg {
     width: 52px;
   }
 } 
+
